docker-images/syntax-highlighter/crates/scip-syntax/tests/snapshots/integration_test__java_evaluation.snap
---
source: crates/scip-syntax/tests/integration_test.rs
expression: "String::from_utf8(str).unwrap()"
---
{"precision_percent":"96.3","recall_percent":"94.0","true_positives":"77.8","false_positives":"3.0","false_negatives":"5.0"}

False negatives (FN): 5
[FN] src/main/java/TodoList.java: L0 C8 -- semanticdb maven . . com/
[FN] src/main/java/TodoList.java: L0 C30 -- semanticdb maven . . com/sourcegraph/graph/twodwo/
[FN] src/main/java/TodoList.java: L2 C7 -- semanticdb maven . . java/
[FN] src/main/java/Main.java: L0 C8 -- semanticdb maven . . com/
[FN] src/main/java/Main.java: L0 C30 -- semanticdb maven . . com/sourcegraph/graph/twodwo/

False positives: 3
How many extra occurrences we reported compared to compiler?
[FP] src/main/java/TodoList.java: L0 C8 -- scip-ctags . . . `com.sourcegraph.graph.twodwo`/
[FP] src/main/java/TodoList.java: L2 C7 -- scip-syntax . . . `java.util`/
[FP] src/main/java/Main.java: L0 C8 -- scip-ctags . . . `com.sourcegraph.graph.twodwo`/

True positives: 87
[TP] src/main/java/TodoList.java: L0 C12 -- semanticdb maven . . com/sourcegraph/
[TP] src/main/java/TodoList.java: L0 C24 -- semanticdb maven . . com/sourcegraph/graph/
[TP] src/main/java/TodoList.java: L2 C12 -- semanticdb maven . . java/util/
[TP] src/main/java/TodoList.java: L2 C17 -- semanticdb maven jdk 17 java/util/ArrayList#
[TP] src/main/java/TodoList.java: L4 C13 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#
[TP] src/main/java/TodoList.java: L6 C21 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#
[TP] src/main/java/TodoList.java: L7 C10 -- semanticdb maven jdk 17 java/lang/String#
[TP] src/main/java/TodoList.java: L7 C17 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#title.
[TP] src/main/java/TodoList.java: L8 C18 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#done.
[TP] src/main/java/TodoList.java: L10 C9 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#`<init>`().
[TP] src/main/java/TodoList.java: L10 C14 -- semanticdb maven jdk 17 java/lang/String#
[TP] src/main/java/TodoList.java: L10 C21 -- local doc-0-0
[TP] src/main/java/TodoList.java: L11 C8 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#title.
[TP] src/main/java/TodoList.java: L11 C16 -- local doc-0-0
[TP] src/main/java/TodoList.java: L12 C8 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#done.
[TP] src/main/java/TodoList.java: L15 C9 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#`<init>`(+1).
[TP] src/main/java/TodoList.java: L15 C14 -- semanticdb maven jdk 17 java/lang/String#
[TP] src/main/java/TodoList.java: L15 C21 -- local doc-0-1
[TP] src/main/java/TodoList.java: L15 C36 -- local doc-0-2
[TP] src/main/java/TodoList.java: L16 C8 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#title.
[TP] src/main/java/TodoList.java: L16 C16 -- local doc-0-1
[TP] src/main/java/TodoList.java: L17 C8 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#done.
[TP] src/main/java/TodoList.java: L17 C15 -- local doc-0-2
[TP] src/main/java/TodoList.java: L20 C9 -- semanticdb maven jdk 17 java/lang/String#
[TP] src/main/java/TodoList.java: L20 C16 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#getTitle().
[TP] src/main/java/TodoList.java: L21 C15 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#title.
[TP] src/main/java/TodoList.java: L25 C9 -- semanticdb maven jdk 17 java/util/ArrayList#
[TP] src/main/java/TodoList.java: L25 C19 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#
[TP] src/main/java/TodoList.java: L25 C25 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#todos.
[TP] src/main/java/TodoList.java: L27 C8 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#`<init>`().
[TP] src/main/java/TodoList.java: L28 C2 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#todos.
[TP] src/main/java/TodoList.java: L28 C14 -- semanticdb maven jdk 17 java/util/ArrayList#`<init>`(+1).
[TP] src/main/java/TodoList.java: L31 C13 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#addTodo().
[TP] src/main/java/TodoList.java: L31 C21 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#
[TP] src/main/java/TodoList.java: L31 C26 -- local doc-0-3
[TP] src/main/java/TodoList.java: L32 C2 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#todos.
[TP] src/main/java/TodoList.java: L32 C8 -- semanticdb maven jdk 17 java/util/ArrayList#add(+1).
[TP] src/main/java/TodoList.java: L32 C12 -- local doc-0-3
[TP] src/main/java/TodoList.java: L35 C8 -- semanticdb maven jdk 17 java/util/ArrayList#
[TP] src/main/java/TodoList.java: L35 C18 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#
[TP] src/main/java/TodoList.java: L35 C24 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#getTodos().
[TP] src/main/java/TodoList.java: L36 C9 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#todos.
[TP] src/main/java/TodoList.java: L39 C13 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#summarise().
[TP] src/main/java/TodoList.java: L40 C4 -- semanticdb maven jdk 17 java/lang/System#
[TP] src/main/java/TodoList.java: L40 C11 -- semanticdb maven jdk 17 java/lang/System#out.
[TP] src/main/java/TodoList.java: L40 C15 -- semanticdb maven jdk 17 java/io/PrintStream#println(+8).
[TP] src/main/java/TodoList.java: L41 C7 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#
[TP] src/main/java/TodoList.java: L41 C12 -- local doc-0-4
[TP] src/main/java/TodoList.java: L41 C19 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#todos.
[TP] src/main/java/TodoList.java: L42 C7 -- local doc-0-4
[TP] src/main/java/TodoList.java: L42 C12 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#done.
[TP] src/main/java/TodoList.java: L43 C4 -- semanticdb maven jdk 17 java/lang/System#
[TP] src/main/java/TodoList.java: L43 C11 -- semanticdb maven jdk 17 java/lang/System#out.
[TP] src/main/java/TodoList.java: L43 C15 -- semanticdb maven jdk 17 java/io/PrintStream#println(+8).
[TP] src/main/java/TodoList.java: L43 C33 -- local doc-0-4
[TP] src/main/java/TodoList.java: L43 C38 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#getTitle().
[TP] src/main/java/TodoList.java: L45 C4 -- semanticdb maven jdk 17 java/lang/System#
[TP] src/main/java/TodoList.java: L45 C11 -- semanticdb maven jdk 17 java/lang/System#out.
[TP] src/main/java/TodoList.java: L45 C15 -- semanticdb maven jdk 17 java/io/PrintStream#println(+8).
[TP] src/main/java/TodoList.java: L45 C33 -- local doc-0-4
[TP] src/main/java/TodoList.java: L45 C38 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#getTitle().
[TP] src/main/java/Main.java: L0 C12 -- semanticdb maven . . com/sourcegraph/
[TP] src/main/java/Main.java: L0 C24 -- semanticdb maven . . com/sourcegraph/graph/
[TP] src/main/java/Main.java: L3 C13 -- semanticdb maven . . com/sourcegraph/graph/twodwo/Main#`<init>`().
[TP] src/main/java/Main.java: L5 C23 -- semanticdb maven . . com/sourcegraph/graph/twodwo/Main#main().
[TP] src/main/java/Main.java: L5 C28 -- semanticdb maven jdk 17 java/lang/String#
[TP] src/main/java/Main.java: L5 C37 -- local doc-1-0
[TP] src/main/java/Main.java: L7 C12 -- local doc-1-1
[TP] src/main/java/Main.java: L7 C27 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#`<init>`().
[TP] src/main/java/Main.java: L9 C12 -- semanticdb maven jdk 17 java/lang/String#
[TP] src/main/java/Main.java: L9 C19 -- local doc-1-2
[TP] src/main/java/Main.java: L9 C22 -- local doc-1-0
[TP] src/main/java/Main.java: L10 C12 -- local doc-1-1
[TP] src/main/java/Main.java: L10 C21 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#addTodo().
[TP] src/main/java/Main.java: L10 C33 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#
[TP] src/main/java/Main.java: L10 C42 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#`<init>`().
[TP] src/main/java/Main.java: L10 C47 -- local doc-1-2
[TP] src/main/java/Main.java: L13 C8 -- local doc-1-1
[TP] src/main/java/Main.java: L13 C17 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#addTodo().
[TP] src/main/java/Main.java: L13 C29 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#
[TP] src/main/java/Main.java: L13 C38 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#`<init>`(+1).
[TP] src/main/java/Main.java: L14 C8 -- local doc-1-1
[TP] src/main/java/Main.java: L14 C17 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#addTodo().
[TP] src/main/java/Main.java: L14 C29 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#
[TP] src/main/java/Main.java: L14 C38 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#Item#`<init>`().
[TP] src/main/java/Main.java: L17 C8 -- local doc-1-1
[TP] src/main/java/Main.java: L17 C17 -- semanticdb maven . . com/sourcegraph/graph/twodwo/TodoList#summarise().

Symbol mapping
scip-ctags . . . `com.sourcegraph.graph.twodwo`/TodoList#
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList# [1/4 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/TodoList#summarise().
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#summarise(). [1/2 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/TodoList#getTodos().
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#getTodos(). [1/1 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/TodoList#addTodo().
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#addTodo(). [1/4 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/TodoList#todos.
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#todos. [1/5 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/TodoList#Item#
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item# [1/5 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/TodoList#Item#getTitle().
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#getTitle(). [1/3 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/TodoList#Item#done.
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#done. [1/4 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/TodoList#Item#title.
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#title. [1/4 occurrences]

local doc-0-1
   1.00 local doc-0-0 [2/2 occurrences]

local doc-0-2
   1.00 local doc-0-1 [2/2 occurrences]

local doc-0-3
   1.00 local doc-0-2 [2/2 occurrences]

local doc-0-4
   1.00 local doc-0-3 [2/2 occurrences]

local doc-0-5
   1.00 local doc-0-4 [4/4 occurrences]

scip-syntax . . . sourcegraph.
   1.00 semanticdb . . . com/sourcegraph/ [2/2 occurrences]

scip-syntax . . . graph.
   1.00 semanticdb . . . com/sourcegraph/graph/ [2/2 occurrences]

scip-syntax . . . util.
   1.00 semanticdb . . . java/util/ [1/1 occurrences]

scip-syntax . . . ArrayList#
   0.50 semanticdb . . . java/util/ArrayList# [3/3 occurrences]
   0.50 semanticdb . . . java/util/ArrayList#`<init>`(+1). [1/1 occurrences]

scip-syntax . . . Item#
   0.34 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#`<init>`(). [2/3 occurrences]
   0.25 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#`<init>`(+1). [1/2 occurrences]
   0.41 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item# [4/5 occurrences]

scip-syntax . . . String#
   1.00 semanticdb . . . java/lang/String# [6/6 occurrences]

scip-syntax . . . Item.
   0.40 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#`<init>`(). [1/3 occurrences]
   0.60 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#`<init>`(+1). [1/2 occurrences]

scip-syntax . . . title.
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#title. [3/4 occurrences]

scip-syntax . . . done.
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#done. [3/4 occurrences]

scip-syntax . . . TodoList.
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#`<init>`(). [1/2 occurrences]

scip-syntax . . . todos.
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#todos. [4/5 occurrences]

scip-syntax . . . add().
   1.00 semanticdb . . . java/util/ArrayList#add(+1). [1/1 occurrences]

scip-syntax . . . System.
   1.00 semanticdb . . . java/lang/System# [3/3 occurrences]

scip-syntax . . . out.
   1.00 semanticdb . . . java/lang/System#out. [3/3 occurrences]

scip-syntax . . . println().
   1.00 semanticdb . . . java/io/PrintStream#println(+8). [3/3 occurrences]

scip-syntax . . . getTitle().
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#Item#getTitle(). [2/3 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/Main#
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/Main#`<init>`(). [1/1 occurrences]

scip-ctags . . . `com.sourcegraph.graph.twodwo`/Main#main().
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/Main#main(). [1/1 occurrences]

local doc-1-1
   1.00 local doc-1-0 [2/2 occurrences]

local doc-1-2
   1.00 local doc-1-1 [5/5 occurrences]

local doc-1-3
   1.00 local doc-1-2 [2/2 occurrences]

scip-syntax . . . TodoList#
   0.40 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#`<init>`(). [1/2 occurrences]
   0.60 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList# [3/4 occurrences]

scip-syntax . . . addTodo().
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#addTodo(). [3/4 occurrences]

scip-syntax . . . summarise().
   1.00 semanticdb . . . com/sourcegraph/graph/twodwo/TodoList#summarise(). [1/2 occurrences]


