docker-images/syntax-highlighter/crates/scip-syntax/tests/snapshots/integration_test__java_tar_stream_indexing.snap
---
source: crates/scip-syntax/tests/integration_test.rs
expression: index_snapshot
---
//----FILE=package-info.java
  @Deprecated
  package foo.bar;
//        ^^^^^^^ definition(Package) scip-ctags `foo.bar`/
  
  class Baz {}
//      ^^^ definition scip-ctags `foo.bar`/Baz#


//----FILE=src/main/java/globals.java
  package MyPackage;
//        ^^^^^^^^^ definition(Package) scip-ctags MyPackage/
  
  public class globals {
//             ^^^^^^^ definition scip-ctags MyPackage/globals#
      private static int field1;
//                       ^^^^^^ definition scip-ctags MyPackage/globals#field1.
      protected static int field2;
//                         ^^^^^^ definition scip-ctags MyPackage/globals#field2.
      public static int field3;
//                      ^^^^^^ definition scip-ctags MyPackage/globals#field3.
      private int field4;
//                ^^^^^^ definition scip-ctags MyPackage/globals#field4.
      protected int field5;
//                  ^^^^^^ definition scip-ctags MyPackage/globals#field5.
      public int field6;
//               ^^^^^^ definition scip-ctags MyPackage/globals#field6.
  
      private static void method1() {}
//                        ^^^^^^^ definition scip-ctags MyPackage/globals#method1().
      protected static void method2() {}
//                          ^^^^^^^ definition scip-ctags MyPackage/globals#method2().
      public static void method3() {}
//                       ^^^^^^^ definition scip-ctags MyPackage/globals#method3().
      private void method4() {}
//                 ^^^^^^^ definition scip-ctags MyPackage/globals#method4().
      protected void method5() {}
//                   ^^^^^^^ definition scip-ctags MyPackage/globals#method5().
      public void method6() {}
//                ^^^^^^^ definition scip-ctags MyPackage/globals#method6().
  
      public static final String COOLEST_STRING = "probably this one";
//                        ^^^^^^ reference scip-syntax String#
//                               ^^^^^^^^^^^^^^ definition scip-ctags MyPackage/globals#COOLEST_STRING.
  
      public class ClassInAClass {
//                 ^^^^^^^^^^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#
          boolean classy = true;
//                ^^^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#classy.
  
          public static enum Enum {
//                           ^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#Enum#
              these,
//            ^^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#Enum#these.
              should,
//            ^^^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#Enum#should.
              be,
//            ^^ definition scip-ctags MyPackage/globals#ClassInAClass#Enum#be.
              recognized,
//            ^^^^^^^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#Enum#recognized.
              as,
//            ^^ definition scip-ctags MyPackage/globals#ClassInAClass#Enum#as.
              terms
//            ^^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#Enum#terms.
          }
  
          public interface Goated {
//                         ^^^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#Goated#
              boolean withTheSauce();
//                    ^^^^^^^^^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#Goated#withTheSauce().
          }
  
          public void myCoolMethod() {
//                    ^^^^^^^^^^^^ definition scip-ctags MyPackage/globals#ClassInAClass#myCoolMethod().
              class WhatIsGoingOn {}
              boolean iThinkThisIsAllowedButWeDontReallyCare = true;
//                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ definition local 1
          }
      }
  }



